Project1/aws-ec2.tf
# configured aws provider with proper credentials
provider "aws" {
  region    = "us-east-1"
  profile   = "default"
}

# # create default vpc if one does not exit
# resource "aws_default_vpc" "default_vpc" {

#   tags    = {
#     Name  = "utrains default vpc"
#   }
# }

# use data source to get all avalablility zones in region
# data "aws_availability_zones" "available_zones" {}

# # create default subnet if one does not exit
# resource "aws_default_subnet" "default_az1" {
#   availability_zone = data.aws_availability_zones.available_zones.names[0]

#   tags   = {
#     Name = "utrains default subnet"
#   }
# }

# create security group for the ec2 instance
resource "aws_security_group" "utrais_security_gp" {
  name        = "ec2 utrains security group"
  description = "allow access on ports 80 and 22 for httpd and ssh"
  # vpc_id      = aws_default_vpc.default_vpc.id

  # allow access on port 80 for Apache Server
  ingress {
    description      = "httpd access port"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }
  # allow access on port 22 ssh connection
  ingress {
    description      = "ssh access"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }
  egress {
    from_port        = 0
    to_port          = 0
    protocol         = -1
    cidr_blocks      = ["0.0.0.0/0"]
  }

  tags   = {
    Name = "utrains server security group"
  }
}

# # use data source to get a registered amazon linux 2 ami
# data "aws_ami" "amazon_linux_2" {
#   most_recent = true
#   owners      = ["amazon"]
  
#   filter {
#     name   = "owner-alias"
#     values = ["amazon"]
#   }

#   filter {
#     name   = "name"
#     values = ["amzn2-ami-hvm*"]
#   }
# }

# Generates a secure private key and encodes it as PEM
resource "tls_private_key" "instance_key" {
  algorithm = "RSA"
  rsa_bits  = 4096
}
# Create the Key Pair
resource "aws_key_pair" "instance_key" {
  key_name   = "instance_key_pair"  
  public_key = tls_private_key.instance_key.public_key_openssh
}
# Save file
resource "local_file" "ssh_key" {
  filename = "${aws_key_pair.instance_key.key_name}.pem"
  content  = tls_private_key.instance_key.private_key_pem
}

# launch the ec2 instance and install jenkis
resource "aws_instance" "ec2_instance" {
  # ami                    = "ami-0afd7c7d3a00702d3"
  ami                    = "ami-0cbdb0332336f1f92"
  instance_type          = "t2.medium"
  # subnet_id              = aws_default_subnet.default_az1.id
  vpc_security_group_ids = [aws_security_group.utrais_security_gp.id]
  key_name               = aws_key_pair.instance_key.key_name
  //user_data            = file("installed_script.sh")

  tags = {
    Name = "utrains Server and ssh security group"
  }
}
# an empty resource block
resource "null_resource" "name" {

  # ssh into the ec2 instance 
  connection {
    type        = "ssh"
    user        = "ec2-user"
    private_key = file(local_file.ssh_key.filename)
    host        = aws_instance.ec2_instance.public_ip
  }
  # wait for ec2 to be created
  depends_on = [aws_instance.ec2_instance]
}

# # print the url of the server
# output "ec2_url" {
#   value     = join ("", ["http://", aws_instance.ec2_instance.public_dns, ":", "80"])
# }

# print the url of the server
output "ssh_connection_command" {
  value     = join ("", ["ssh -i instance_key_pair.pem ec2-user@", aws_instance.ec2_instance.public_dns])
}
